# romea-core-imu

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_imu.repos  romea_imu_public.repos
cmake/: romea_core_imuConfig.cmake.in  romea_imuConfig.cmake.in
include/romea_core_imu/: AccelerationsFrame.hpp  AngularSpeedsFrame.hpp  IMU6DOF.hpp  IMU9DOF.hpp  IMUAHRS.hpp  IMUVRU.hpp  MagneticsFrame.hpp  RollPitchCourseFrame.hpp  RollPitchFrame.hpp
include/romea_core_imu/algorithms/: RollPitchKalmanEstimator.hpp  TriadAlgorithm.hpp  ZeroVelocityEstimator.hpp
include/romea_imu/: AngularSpeedsFrame.hpp  IMU6DOF.hpp  IMUAHRS.hpp  IMUVRU.hpp  MagneticsFrame.hpp  RollPitchCourseFrame.hpp
include/romea_imu/algorithms/: RollPitchKalmanEstimator.hpp  ZeroVelocityEstimator.hpp
src/: IMU6DOF.cpp  IMU9DOF.cpp  IMUAHRS.cpp  IMUVRU.cpp
src/algorithms/: RollPitchKalmanEstimator.cpp  TriadAlgorithm.cpp  ZeroVelocityEstimator.cpp
